# vaify

./: README.md  agent.html  index.html  package.json  register.html  vercel.json  whitepaper.md
api/: db.js  openapi.yaml  package-lock.json  package.json  scoring.js  seed.js  server.js  vaify.db
dashboard/: agent.html  api.js  index.html  register.html  styles.css
sdk/js/: README.md  package.json
sdk/js/src/: client.js  index.js
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/vaify/: __init__.py  client.py  models.py
