[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vaify"
version = "0.1.0"
description = "Python SDK for the Vaify AI Agent Reputation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/vaify/vaify-python"
